# TowBrite_RxMini4

./: .gitignore  Backup of Rx_Firmwr.ewp  CMakeLists.txt  RADIO_CC1110_GFSK.h  README.md  RxBoardDef.h  Rx_Firmwr.dep  Rx_Firmwr.ewd  Rx_Firmwr.ewp  Rx_Firmwr.ewt  app_cfg.h  app_magnetic_cfg.h  bit_math.h  cc1110.h  firmware_Rx.eww  flash_asm.s51  hal_types.h  ioCCxx10_bitdef.h  main.c  sdcc_dma.h  std.h
MCAL/wdt/: wdt_config.h  wdt_private.h  wdt_program.c
script/: post_build.bat
wdt/: wdt_interface.h  wdt_program.c
